--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
   min-height: 100%;
 }
 body {
-    color:#39414b;
+    color:#1B1E24;
     font-family: 'Open Sans',Arial,Helvetica,Sans-Serif;
     display: table;
     width: 100%;
